<resources>
    <string name="app_name">LOOTIFY</string>
    <string name="small_btn_text">NULL</string>
    <string name="contents">contents</string>
    <string name="description">null</string>
    <string name="sub_title">Sub Title</string>
    <string name="number">num</string>
    <string name="question">question</string>
    <string name="required"> *</string>
    <string name="hint">hint</string>
</resources>