<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_frame_low"
    android:backgroundTint="@color/lightBlue"
    android:orientation="horizontal"
    android:weightSum="5">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:background="@drawable/white_frame_low"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="15dp"
            android:contentDescription="@string/description"
            android:src="@drawable/treasure_ic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/step"
                style="@style/contents_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/description" />

            <TextView
                android:id="@+id/setting_value"
                style="@style/subTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_title" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/setting_count"
        style="@style/subTitle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/number"
        android:textColor="@color/white" />

</LinearLayout>