<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:weightSum="7"
        android:orientation="horizontal">

        <LinearLayout
            android:paddingHorizontal="10dp"
            android:gravity="center"
            android:paddingVertical="30dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/question"
                style="@style/contents_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question" />

            <TextView
                android:id="@+id/required_field_indicator"
                style="@style/required_field_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/required" />
        </LinearLayout>

        <EditText
            android:id="@+id/user_input"
            style="@style/contents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:minHeight="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="5"
            android:background="@drawable/white_frame_low"
            android:hint="@string/description"
            android:imeOptions="actionNext"
            android:textColorHint="@color/gray" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textLightColor" />
</LinearLayout>
