<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="30dp"
    android:layout_marginVertical="10dp"
    android:background="@drawable/white_frame_mid"
    android:backgroundTint="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="75dp">

        <TextView
            android:id="@+id/description"
            style="@style/contents_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textColor="@color/textLightColor" />

        <TextView
            android:id="@+id/sub_title"
            style="@style/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="15dp"
            android:text="@string/sub_title" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/contents"
            android:src="@drawable/add_ic" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textLightColor" />

    <FrameLayout
        android:id="@+id/dialog_contents"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1" />

    <View
        android:id="@+id/button_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textLightColor" />

    <LinearLayout
        android:id="@+id/button_contents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:orientation="horizontal" />

</LinearLayout>